data/derived/fa15/progs/unify/prog0389.ml.out
Characters 54-56:
  let fixpoint (f,b) = let f' = (f, f b = b) in wwhile (f',b);;
                                                        ^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
